# itk2cython

./: .gitignore  CMakeLists.txt  README.md  generate_templates.py  test.py
include/: filters.h  itk2cython.h  templates.h
src/: _itk.pyx  _templates.pyx  filters.cpp  itk2cython.cpp  templates.cpp
